--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,4 +73,10 @@
     body {
       @apply bg-background text-foreground;
     }
+
+    input[type="time"]::-webkit-calendar-picker-indicator {
+    background: none;
+    
+}
+
   }
