--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,6 +72,7 @@
     }
     body {
       @apply bg-background text-foreground;
+      @apply bg-slate-50
     }
 
     input[type="time"]::-webkit-calendar-picker-indicator {
