--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,11 @@
 
     input[type="time"]::-webkit-calendar-picker-indicator {
     background: none;
-    
-}
+    }
+    input[type="number"]::-webkit-outer-spin-button,
+    input[type="number"]::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
 
   }
